# deepx-acceleration

./: .gitignore  LICENSE  README.md
.github/workflows/: build-runtime.yml  build-toolchain.yml  delete-temporary-artifacts.yml
conversion-toolchain/: Dockerfile  README.md  build-toolchain.sh  setup-dx_com.sh
conversion-toolchain/scripts/: convert.sh
runtime-library/: CMakeLists.txt  Dockerfile.cross-aarch64  Dockerfile.native  README.md  build-runtimes.sh  build-windows.ps1  download_dxrt.sh  dxrt_windows_commit.txt
runtime-library/include/: concurrent_queue.h  runtime_core.h
runtime-library/src/: runtime_core.cpp
scripts/: downloader.py
